load Wan-1 config

--- a/topologies/training-fxg/files/menus/training-l3.yaml
+++ b/topologies/training-fxg/files/menus/training-l3.yaml
@@ -2,6 +2,8 @@
     lab_list:
       reset:
         description: "Reset All Devices to Base Lab (reset)"
+      OSPF:
+        description: "Load the Wan-1 config for OSPF (OSPF)"
     labconfiglets:
       reset:
         Wan-1:
@@ -24,7 +26,8 @@
           - "host-11-BASE"
         host-12:
           - "host-12-BASE"
+      OSPF:
+        Wan-1:
+          - "Wan-1-BASE"
+          - "Wan-1-OSPF"
           
-
-
-
