--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2039,3 +2039,41 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
     labguides: self
+  training-avd:
+    dev:
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: base-veos-training-avd-2023-2-4301-20240212
+            eos:
+              - 4.30.1F
+    prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2023.2-0208024
+            orderable: false
+            image: base-veos-training-avd-2023-2-4301-20240212
+            eos:
+              - 4.30.1F
+    desc: 'AVD - Arista Validated Design'
+    name: 'AVD - Arista Validated Design'
+    title: 'AVD - Arista Validated Design'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
