--- a/topologies/training-fxf/files/cvp/cvp_info.yaml
+++ b/topologies/training-fxf/files/cvp/cvp_info.yaml
@@ -29,3 +29,9 @@ cvp_info:
         - Access-1-BASE
       Access-2:
         - Access-2-BASE
+      host-1:
+        - host-2-BASE
+      host-12:
+        - host-1-BASE
+      host-14:
+        - host-2-BASE
