--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -598,7 +598,7 @@ topologies:
             resources:
               cpu: 56
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l1-2023-2-4301-20240207
             eos:
@@ -714,7 +714,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l1-exam-2-2023-2-4301-20240207
             eos:
@@ -782,7 +782,7 @@ topologies:
             resources:
               cpu: 56
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch: v2023.2-0214024
             orderable: true
             image: base-veos-training-l2-2023-2-4301-20240207
             eos:
@@ -878,7 +878,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l2-exam-2-2023-2-4301-20240207
             eos:
@@ -1006,7 +1006,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l3-2023-2-4301-20240207
             eos:
@@ -1084,7 +1084,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l3-exam-2023-2-4301-20240207
             eos:
@@ -1152,7 +1152,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l3-2-2023-2-4301-20240207
             eos:
@@ -1351,7 +1351,7 @@ topologies:
             resources:
               cpu: 60
               ram: 88
-            branch:  v2023.2-0207024.2
+            branch:  v2023.2-0214024
             orderable: true
             image: base-veos-training-l4-exam-2023-2-4301-20240207
             eos:
@@ -2028,6 +2028,44 @@ topologies:
               cpu: 48
               ram: 64
             branch: v2023.2-0208024
+            orderable: true
+            image: training-fxg-cl-veos-2023-2
+            eos:
+              - 4.30.1F
+    desc: 'Training FXG'
+    name: 'Training FXG'
+    title: 'Training FXG'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+  training-fxf:
+    dev:
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: training-fxf-cl-veos-2023-2-20230214
+            eos:
+              - 4.30.1F
+    prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2023.2-0214024
             orderable: true
             image: training-fxg-cl-veos-2023-2
             eos:
