--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2067,12 +2067,12 @@ topologies:
               ram: 64
             branch: v2023.2-0214024
             orderable: true
-            image: training-fxg-cl-veos-2023-2
+            image: training-fxf-cl-veos-2023-2-20230214
             eos:
               - 4.30.1F
-    desc: 'Training FXG'
-    name: 'Training FXG'
-    title: 'Training FXG'
+    desc: 'Training FXF'
+    name: 'Training FXF'
+    title: 'Training FXF'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
