--- a/topologies/training-fxf-ceos/topo_build.yml
+++ b/topologies/training-fxf-ceos/topo_build.yml
@@ -113,23 +113,27 @@ nodes:
        - neighborDevice: host-14
          neighborPort: Ethernet1
          port: Ethernet3
- - host-1:
+servers:
+  - host-1:
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
       ip_addr: 192.168.0.41
-      sys_mac: 00:1c:73:e1:c6:01
+      port : 6001
       neighbors:
         - neighborDevice: Wan-1
           neighborPort: Ethernet3
           port: Ethernet1
- - host-12:
+  - host-12:
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
       ip_addr: 192.168.0.42
-      sys_mac: 00:1c:73:e2:c6:01
+      port : 6002
       neighbors:
         - neighborDevice: Access-1
           neighborPort: Ethernet3
           port: Ethernet1
- - host-14:
+  - host-14:
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
       ip_addr: 192.168.0.43
-      sys_mac: 00:1c:73:e3:c6:01
+      port : 6003
       neighbors:
         - neighborDevice: Access-2
           neighborPort: Ethernet3
