--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2055,6 +2055,20 @@ topologies:
             image: training-fxf-cl-veos-2023-2-20230214
             eos:
               - 4.30.1F
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: training-fxf-cl-ceos-2023-2-20240227
+            eos:
+              - 4.30.1F
     prod:
       veos:
         cpu: 60
