--- a/topologies/training-fxg/topo_build.yml
+++ b/topologies/training-fxg/topo_build.yml
@@ -125,6 +125,7 @@ nodes:
         - neighborDevice: host-12
           neighborPort: Ethernet1
           port: Ethernet3
+servers:
   - host-1:
       ip_addr: 192.168.0.41
       sys_mac: 00:1c:73:e1:c6:01
