--- a/topologies/training-fxg/topo_build.yml
+++ b/topologies/training-fxg/topo_build.yml
@@ -128,21 +128,24 @@ nodes:
 servers:
   - host-1:
       ip_addr: 192.168.0.41
-      sys_mac: 00:1c:73:e1:c6:01
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
+      port : 6001
       neighbors:
         - neighborDevice: Wan-1
           neighborPort: Ethernet3
           port: Ethernet1
   - host-11:
       ip_addr: 192.168.0.42
-      sys_mac: 00:1c:73:e2:c6:01
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
+      port : 6002
       neighbors:
         - neighborDevice: Access-1
           neighborPort: Ethernet3
           port: Ethernet1
   - host-12:
       ip_addr: 192.168.0.43
-      sys_mac: 00:1c:73:e3:c6:01
+      image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host1:latest"
+      port : 6003
       neighbors:
         - neighborDevice: Access-2
           neighborPort: Ethernet3
