--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2018,6 +2018,20 @@ topologies:
             eos:
               - 4.30.1F
     prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2023.2-0305024
+            orderable: false
+            image: training-fxg-clab-cl-2023-2-20240301
+            eos:
+              - 4.30.1F
       ceos:
         cpu: 60
         ram: 110
@@ -2081,6 +2095,20 @@ topologies:
               ram: 64
             branch: v2023.2-0305024
             orderable: true
+            image: training-fxf-cl-ceos-2023-2-20240227
+            eos:
+              - 4.30.1F
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2023.2-0305024
+            orderable: false
             image: training-fxf-cl-ceos-2023-2-20240227
             eos:
               - 4.30.1F
