--- a/topologies/training-level7-part2-Test2/topo_build.yml
+++ b/topologies/training-level7-part2-Test2/topo_build.yml
@@ -207,9 +207,9 @@ nodes:
         - neighborDevice: leaf2-DC3
           neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: internet
-          neighborPort: Ethernet5
-          port: Ethernet1
+        - neighborDevice: PE31
+          neighborPort: Ethernet3
+          port: Ethernet7
 
    - spine2-DC3:
       ip_addr: 192.168.0.78
@@ -227,9 +227,9 @@ nodes:
         - neighborDevice: leaf1-DC3
           neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: internet
-          neighborPort: Ethernet6
-          port: Ethernet1
+        - neighborDevice: PE31
+          neighborPort: Ethernet4
+          port: Ethernet7
 
 # Leafs DC1
   - leaf1-DC1:
@@ -1030,14 +1030,15 @@ nodes:
           neighborPort: Ethernet2
           port: Ethernet2
         - neighborDevice: spine1-DC3
-          neighborPort: Ethernet5
+          neighborPort: Ethernet7
           port: Ethernet3
         - neighborDevice: spine2-DC3
-          neighborPort: Ethernet5
+          neighborPort: Ethernet7
           port: Ethernet4
         - neighborDevice: RR
           neighborPort: Ethernet9
           port: Ethernet5
+
 
 # WAN RR
   - RR:
