--- a/topologies/training-level7-part2/topo_build.yml
+++ b/topologies/training-level7-part2/topo_build.yml
@@ -419,13 +419,16 @@ nodes:
         - neighborDevice: spine3-DC1
           neighborPort: Ethernet7
           port: Ethernet5
-          # Connection to DCI
+        - neighborDevice: PE12
+          neighborPort: Ethernet3
+          port: Ethernet10
         - neighborDevice: PE11
           neighborPort: Ethernet3
           port: Ethernet12
         - neighborDevice: OOB-DC1
-          neighborPort: Ethernet10
+          neighborPort: Ethernet9
           port: Ethernet15
+
 
 # Leafs DC2
   - leaf1-DC2:
@@ -895,13 +898,13 @@ nodes:
       ip_addr: 192.168.0.93
       sys_mac: 00:1c:73:93:c6:01
       neighbors:
-        - neighborDevice: P1
+        - neighborDevice: PE11
           neighborPort: Ethernet1
           port: Ethernet1
         - neighborDevice: P3
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: P31
+        - neighborDevice: PE31
           neighborPort: Ethernet1
           port: Ethernet3
         - neighborDevice: P2
@@ -982,7 +985,7 @@ nodes:
         - neighborDevice: PE21
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: PE1
+        - neighborDevice: P1
           neighborPort: Ethernet2
           port: Ethernet2
         - neighborDevice: PE31
@@ -1011,7 +1014,7 @@ nodes:
         - neighborDevice: PE21
           neighborPort: Ethernet4
           port: Ethernet3
-        - neighborDevice: P4
+        - neighborDevice: P3
           neighborPort: Ethernet4
           port: Ethernet4
         - neighborDevice: RR
