--- a/topologies/training-level7-part2-Test2/files/cvp/cvp_info.yaml
+++ b/topologies/training-level7-part2-Test2/files/cvp/cvp_info.yaml
@@ -69,30 +69,34 @@ cvp_info:
     Provider Network:
       parent: Tenant
       nodes:
-    ISP1:
-      parent: "Provider Network"
+    SR-Domain1:
+      parent: "SR-Domain1"
       nodes:
-      - core1-isp1
-      - core2-isp1
-    ISP2:
-      parent: "Provider Network"
+      - ASBR1
+      - RR1
+      - PE11
+      - PE12
+      - P1
+    SR-Domain2:
+      parent: "SR-Domain2"
       nodes:
-      - core1-isp2
-      - core2-isp2
-    Internet:
-      parent: "Provider Network"
+       - ASBR2
+       - RR2
+       - PE21
+       - PE22
+       - P2
+    SR-Domain3:
+      parent: "SR-Domain3"
       nodes:
-      - internet
+       - ASBR3
+       - RR3
+       - PE31
     OOB:
       parent: Tenant
       nodes:
       - OOB-DC1
       - OOB-DC2
       - OOB-CORE
-    DCI:
-      parent: Tenant
-      nodes:
-      - DCI
   snapshots:
   configlets:
     containers:
@@ -162,24 +166,32 @@ cvp_info:
       host2-DC3:
       - host2-DC3-BASE
       - host2-DC3-START
-      core1-isp1:
-      - core1-ISP1-BASE
-      - core1-ISP1-START
-      core2-isp1:
-      - core2-ISP1-BASE
-      - core2-ISP1-START
-      core1-isp2:
-      - core1-ISP2-BASE
-      - core1-ISP2-START
-      core2-isp2:
-      - core2-ISP2-BASE
-      - core2-ISP2-START
-      internet:
-      - internet-BASE
-      - internet-START
-      DCI:
-      - DCI-BASE
-      - DCI-START
+      RR1:
+      - RR1-BASE
+      RR2:
+      - RR2-BASE
+      RR3:
+      - RR3-BASE
+      ASBR1:
+      - ASBR1-BASE
+      ASBR2:
+      - ASBR2-BASE
+      ASBR3:
+      - ASBR3-BASE
+      PE11:
+      - PE11-BASE
+      PE12:
+      - PE12-BASE
+      PE21:
+      - PE21-BASE
+      PE22:
+      - PE22-BASE
+      PE31:
+      - PE31-BASE
+      P1:
+      - P1-BASE
+      P2:
+      - P2-BASE
       OOB-CORE:
       - OOB-CORE-BASE
       OOB-DC1:
