--- a/topologies/training-level7-part2-Test2/topo_build.yml
+++ b/topologies/training-level7-part2-Test2/topo_build.yml
@@ -918,7 +918,7 @@ nodes:
         - neighborDevice: ASBR3
           neighborPort: Ethernet1
           port: Ethernet2
-        - neighborDevice: PE1
+        - neighborDevice: P1
           neighborPort: Ethernet3
           port: Ethernet3
         - neighborDevice: RR1
@@ -947,9 +947,9 @@ nodes:
       ip_addr: 192.168.0.95
       sys_mac: 00:1c:73:95:c6:01
       neighbors:
-        - neighborDevice: PE2
-          neighborPort: Ethernet1
-          port: Ethernet2
+        - neighborDevice: P2
+          neighborPort: Ethernet2
+          port: Ethernet1
         - neighborDevice: borderleaf1-DC2
           neighborPort: Ethernet12
           port: Ethernet2
@@ -1062,6 +1062,9 @@ nodes:
         - neighborDevice: PE31
           neighborPort: Ethernet1
           port: Ethernet3
+        - neighborDevice: RR3
+          neighborPort: Ethernet1
+          port: Ethernet4
 
 
   - RR3:
